test/integration/bad/numeric-literal/real-bad2.stan
transformed data {
    real x = 12_.345;
}